--- a/.htaccess
+++ b/.htaccess
@@ -41,6 +41,15 @@ RewriteRule ^subdom/[^/]+/(.+[^/])$ /$1/ [R]
 # error page
 ErrorDocument 404 /404.html
 
+# PHP form endpoints - žádná cache
+<FilesMatch "^(form\.php|form-token\.php)$">
+  <IfModule mod_headers.c>
+    Header set Cache-Control "no-cache, no-store, must-revalidate"
+    Header set Pragma "no-cache"
+    Header set Expires "0"
+  </IfModule>
+</FilesMatch>
+
 # BROWSER CACHING
 <IfModule mod_expires.c>
   ExpiresActive On
